fix(layout): fix horizontal scroll on small screens

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,6 +5,10 @@ body {
   height: 100%;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 14px;
